# openapi-mcp

./: .bandit  .gitignore  .pre-commit-config.yaml  .vercelignore  DEPLOYMENT.md  README.md  docker-entrypoint.sh  getting_started.md  pyproject.toml  requirements.txt  vercel.json
.github/: CODEOWNERS
.github/workflows/: lint_gh_actions.yaml  test-lint.yml
api/: index.py
integration/: test_integration.py
src/app/: config.py  http_server.py  main.py  mcp_server.py  spec_fetcher.py
test/: test_app.py  test_mcp_server.py  test_spec_fetcher.py
